--- a/index.html
+++ b/index.html
@@ -9,24 +9,31 @@
   <body>
     <h1>Nathaniel Pridgen: Things I Like</h1>
     <main>
+      <img src="24119752982_ea19bd2575_c.jpg" alt="Man With Camera" />
       <p>
         I’m very passionate about photography. However, throughout the years I
         stopped doing it as much as I used to. Recently however, I’ve purchased
         a new camera and equipment and I’m falling in love with the craft all
         over again. I’ve even started to dabble in videography.
       </p>
+      <img src="pexels-ready-made-3850925.jpg" alt="Brunch food on the table" />
       <p>
         I love food, I’m sure someone else is going to say that, because most
         people love food. However, I enjoy brunch the most. Brunch is not only
         about eating breakfast at any time of the day, it’s also about
         socializing with the people who are most important to you.
       </p>
+      <img
+        src="pexels-eberhard-grossgasteiger-691574.jpg"
+        alt="Foggy Cabin in the woods"
+      />
       <p>
         Fall is my favorite time of year. Mainly because Fall involves all of my
         favorite colors: Olive green, burnt orange and, mustard yellow. Also, I
         do love the fall drink selections when it comes to Starbucks. Not to
         mention the fall selection when it comes to Bath and Bodyworks.
       </p>
+      <img src="blckorchidfeat-1.jpg" alt="Bottle of cologne" />
       <p>
         Speaking of bath and Bodyworks, I am a fragrance connoisseur. I collect
         different perfumes and candles. My favorite candle is teakwood mahogany
@@ -34,6 +41,10 @@
         is a Tom Ford black orchid. It’s considered to be a woman’s fragrance,
         but most people would say it’s unisex.
       </p>
+      <img
+        src="pexels-pavel-danilyuk-6593374.jpg"
+        alt="Photo of insde of a local tattoo shop"
+      />
       <p>
         I have approximately six tattoos. One is a very ugly hand on the inside
         of my arm. The only way to see it is if I show it to you. I’m not going
@@ -43,6 +54,7 @@
         offered to give me a tattoos so she wouldn’t have to endure the pain
         alone. We broke up years later.
       </p>
+      <img src="fun-facts.jpg" alt="Sign of fun fact" />
       <p>
         Honestly, I can’t think of anything else to tell about myself. So I
         thought it be nice to give some fun facts. First, it is impossible to
@@ -52,6 +64,7 @@
         north and the south of north and South America. Below this paragraph
         you’ll find a random unordered list of all the continents.
       </p>
+      img
     </main>
   </body>
 </html>
