--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         a new camera and equipment and I’m falling in love with the craft all
         over again. I’ve even started to dabble in videography.
       </p>
-      <img src="pexels-ready-made-3850925.jpg" alt="Brunch food on the table" />
+      <a href="https://www.flickr.com/photos/nathanielpridgen"
+        >My Photography</a
+      >
       <p>
         I love food, I’m sure someone else is going to say that, because most
         people love food. However, I enjoy brunch the most. Brunch is not only
@@ -33,7 +35,6 @@
         do love the fall drink selections when it comes to Starbucks. Not to
         mention the fall selection when it comes to Bath and Bodyworks.
       </p>
-      <img src="blckorchidfeat-1.jpg" alt="Bottle of cologne" />
       <p>
         Speaking of bath and Bodyworks, I am a fragrance connoisseur. I collect
         different perfumes and candles. My favorite candle is teakwood mahogany
@@ -54,7 +55,6 @@
         offered to give me a tattoos so she wouldn’t have to endure the pain
         alone. We broke up years later.
       </p>
-      <img src="fun-facts.jpg" alt="Sign of fun fact" />
       <p>
         Honestly, I can’t think of anything else to tell about myself. So I
         thought it be nice to give some fun facts. First, it is impossible to
