--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
       south of north and South America. Below this paragraph you’ll find a
       random unordered list of all the continents.
     </p>
+    <div class="form">
+      <h2>Comment Form</h2>
+      <h3>Name</h3>
+      <input type="text" name="name" placeholder="Enter your name" /> <br />
+      <input type="text" name="email" placeholder="Enter your email" /> <br />
+      <textarea
+        name="textarea"
+        id="textArea"
+        cols="30"
+        rows="10"
+        placeholder="Please enter any extra comments here."
+      ></textarea>
+    </div>
+
     <!-- </main> -->
   </body>
 </html>
