--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="navBar">
       <ul>
         <li><a href="photography.asp">Photography</a></li>
-        <li><a href="brunch">Brunch</a></li>
-        <li><a href="Fall">Fall</a></li>
-        <li><a href="Fragrances">Fragrances</a></li>
-        <li><a href="Tattoos">Tattoos</a></li>
-        <li><a href="watches">Watches</a></li>
+        <li><a href="brunch.asp">Brunch</a></li>
+        <li><a href="Fall.asp">Fall</a></li>
+        <li><a href="Fragrances.asp">Fragrances</a></li>
+        <li><a href="Tattoos.asp">Tattoos</a></li>
+        <li><a href="watches.asp">Watches</a></li>
       </ul>
     </div>
     <img
@@ -98,7 +98,9 @@
         rows="10"
         placeholder="Please enter any extra comments here."
       ></textarea>
+      <button id="submit">Submit</button>
     </div>
+    <footer>Created By Nathaniel Pridgen</footer>
 
     <!-- </main> -->
   </body>
