--- a/index.html
+++ b/index.html
@@ -12,86 +12,126 @@
     <h1>Nathaniel Pridgen: Things I Like</h1>
     <div class="navBar">
       <ul>
-        <li><a href="photography.asp">Photography</a></li>
-        <li><a href="brunch.asp">Brunch</a></li>
-        <li><a href="Fall.asp">Fall</a></li>
-        <li><a href="Fragrances.asp">Fragrances</a></li>
-        <li><a href="Tattoos.asp">Tattoos</a></li>
-        <li><a href="watches.asp">Watches</a></li>
+        <li><a href="#phOto">Photography</a></li>
+        <li><a href="#brUnch">Brunch</a></li>
+        <li><a href="#fallTime">Fall</a></li>
+        <li><a href="#fragrAnce">Fragrances</a></li>
+        <li><a href="#tattoO">Tattoos</a></li>
+        <li><a href="#watcheS">Watches</a></li>
       </ul>
     </div>
     <br />
     <main>
-      <img
-        src="24119752982_ea19bd2575_c.jpg"
-        alt="Man With Camera"
-        id="camerMan"
-      />
+      <!-- PHOTO -->
+      <div id="phOto">
+        <h3>Blank</h3>
+        <h2>Photography</h2>
+        <img
+          src="24119752982_ea19bd2575_c.jpg"
+          alt="Man With Camera"
+          id="camerMan"
+        />
 
-      <p>
-        I’m very passionate about photography. However, throughout the years I
-        stopped doing it as much as I used to. Recently however, I’ve purchased
-        a new camera and equipment and I’m falling in love with the craft all
-        over again. I’ve even started to dabble in videography.
-      </p>
+        <p>
+          I’m very passionate about photography. However, throughout the years I
+          stopped doing it as much as I used to. Recently however, I’ve
+          purchased a new camera and equipment and I’m falling in love with the
+          craft all over again. I’ve even started to dabble in videography.
+        </p>
 
-      <a href="https://www.flickr.com/photos/nathanielpridgen"
-        >My Photography</a
-      >
-      <h2>Brunch</h2>
-      <p>
-        I love food, I’m sure someone else is going to say that, because most
-        people love food. However, I enjoy brunch the most. Brunch is not only
-        about eating breakfast at any time of the day, it’s also about
-        socializing with the people who are most important to you.
-      </p>
-      <a href="https://flyingbiscuit.com" id="flying">The Flying Biscuit</a>
-      <h2>Fall</h2>
-      <img
-        src="pexels-eberhard-grossgasteiger-691574.jpg"
-        alt="Foggy Cabin in the woods"
-      />
-      <p>
-        Fall is my favorite time of year. Mainly because Fall involves all of my
-        favorite colors: Olive green, burnt orange and, mustard yellow. Also, I
-        do love the fall drink selections when it comes to Starbucks. Not to
-        mention the fall selection when it comes to Bath and Bodyworks.
-      </p>
+        <a href="https://www.flickr.com/photos/nathanielpridgen"
+          >My Photography</a
+        >
+      </div>
 
-      <h2>Fragrances</h2>
-      <p>
-        Speaking of bath and Bodyworks, I am a fragrance connoisseur. I collect
-        different perfumes and candles. My favorite candle is teakwood mahogany
-        intense from Bath and Bodyworks and my favorite fall fragrance to wear
-        is a Tom Ford black orchid. It’s considered to be a woman’s fragrance,
-        but most people would say it’s unisex.
-      </p>
-      <h2>Tattoos</h2>
-      <img
-        src="pexels-pavel-danilyuk-6593374.jpg"
-        alt="Photo of insde of a local tattoo shop"
-      />
-      <p>
-        I have approximately six tattoos. One is a very ugly hand on the inside
-        of my arm. The only way to see it is if I show it to you. I’m not going
-        to show it to you because it’s ugly. The only reason I got it is because
-        my ex girlfriend was getting her first tattoo, and told me she was
-        scared. So the tattoo artist next to the artist giving her a tattoo
-        offered to give me a tattoos so she wouldn’t have to endure the pain
-        alone. We broke up years later.
-      </p>
-      <h2>Watches</h2>
-      <p>
-        Lastly, a very unhealthy have hobby of mines is watch collecting.
-        Currently, I own eight watches. My most expensive watch would be my
-        Cartier tank. It was a watch that I saved up quite a while for and cost
-        me a little over $2000. My grail watch would be either the Cartier Crash
-        or the Cheich. The only downside of owning watches from Cartier is that
-        they don't retain value. Unlike the two watches I mentioned earlier,
-        unless you own a Patek Philippe or Rolex, your watch really isn't
-        retaining value. Nevertheless, I do favor Cartier over all other watch
-        brands.
-      </p>
+      <!-- BRUNCH -->
+      <div id="brUnch">
+        <h2>Brunch</h2>
+        <p>
+          I love food, I’m sure someone else is going to say that, because most
+          people love food. However, I enjoy brunch the most. Brunch is not only
+          about eating breakfast at any time of the day, it’s also about
+          socializing with the people who are most important to you.
+        </p>
+        <a href="https://flyingbiscuit.com" id="flying">The Flying Biscuit</a>
+      </div>
+
+      <!-- FALL -->
+      <div id="fallTime">
+        <h2>Fall</h2>
+        <img
+          src="pexels-eberhard-grossgasteiger-691574.jpg"
+          alt="Foggy Cabin in the woods"
+        />
+        <p>
+          Fall is my favorite time of year. Mainly because Fall involves all of
+          my favorite colors: Olive green, burnt orange and, mustard yellow.
+          Also, I do love the fall drink selections when it comes to Starbucks.
+          Not to mention the fall selection when it comes to Bath and Bodyworks.
+        </p>
+        <a href="https://unexpectedatlanta.com/fall-activities-in-atlanta/"
+          >Fall Activities</a
+        >
+      </div>
+
+      <!-- FRAGRANCE -->
+      <div id="fragrAnce">
+        <h2>Fragrances</h2>
+        <p>
+          Speaking of bath and Bodyworks, I am a fragrance connoisseur. I
+          collect different perfumes and candles. My favorite candle is teakwood
+          mahogany intense from Bath and Bodyworks and my favorite fall
+          fragrance to wear is a Tom Ford black orchid. It’s considered to be a
+          woman’s fragrance, but most people would say it’s unisex.
+        </p>
+        <a
+          href="https://www.sephora.com/product/black-orchid-P183301?skuId=1007723"
+          >Try Black Orchid for yourself</a
+        >
+      </div>
+
+      <!-- TATTOOS -->
+      <div id="tattoO">
+        <h2>Tattoos</h2>
+        <img
+          src="pexels-pavel-danilyuk-6593374.jpg"
+          alt="Photo of insde of a local tattoo shop"
+        />
+        <p>
+          I have approximately six tattoos. One is a very ugly hand on the
+          inside of my arm. The only way to see it is if I show it to you. I’m
+          not going to show it to you because it’s ugly. The only reason I got
+          it is because my ex girlfriend was getting her first tattoo, and told
+          me she was scared. So the tattoo artist next to the artist giving her
+          a tattoo offered to give me a tattoos so she wouldn’t have to endure
+          the pain alone. We broke up years later.
+        </p>
+        <a href="https://www.pinterest.com/buttercup2162/africa-tattoos/"
+          >Tattoo Isnpiration</a
+        >
+      </div>
+
+      <!-- WATCH SECTION -->
+      <div id="watcheS">
+        <h2>Watches</h2>
+        <p>
+          Lastly, a very unhealthy have hobby of mines is watch collecting.
+          Currently, I own eight watches. My most expensive watch would be my
+          Cartier tank. It was a watch that I saved up quite a while for and
+          cost me a little over $2000. My grail watch would be either the
+          Cartier Crash or the Cheich. The only downside of owning watches from
+          Cartier is that they don't retain value. Unlike the two watches I
+          mentioned earlier, unless you own a Patek Philippe or Rolex, your
+          watch really isn't retaining value. Nevertheless, I do favor Cartier
+          over all other watch brands.
+        </p>
+        <a
+          href="https://www.hodinkee.com/articles/week-on-the-wrist-cartier-crash"
+          >Grail Watch</a
+        >
+      </div>
+
+      <!-- FORMS -->
       <div class="form">
         <h2>Comment Form</h2>
         <h3>Name</h3>
@@ -106,7 +146,7 @@
         ></textarea>
       </div>
       <br />
-      <button id="submit">Submit</button>
+      <button id="submit" aria-label="submit button">Submit</button>
       <ol>
         <li>Randomness</li>
         <li>Randomly</li>
